--- a/RecSystem.ipynb
+++ b/RecSystem.ipynb
@@ -2,6 +2,177 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>ProductId</th>\n",
+       "      <th>UserId</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Content</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>B000E7L2R4</td>\n",
+       "      <td>A1MZYO9TZK0BBI</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Yay Barley Right now I'm mostly just sprouting...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Organic Sprouting Barley Grass Seed - 9 lb</td>\n",
+       "      <td>Lawn &amp; Garden</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>B0001PB9FE</td>\n",
+       "      <td>A3HDKO7OW0QNK4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>The Best Hot Sauce in the World I don't know i...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Original Tequila Picante Gourmet de Inclan - 5 OZ</td>\n",
+       "      <td>Pantry Staples</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>B0009XLVG0</td>\n",
+       "      <td>A2725IB4YY9JEB</td>\n",
+       "      <td>5</td>\n",
+       "      <td>My cats LOVE this \"diet\" food better than thei...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Felidae Dry Cat Food for Senior and Overweight...</td>\n",
+       "      <td>Cats</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>B0009XLVG0</td>\n",
+       "      <td>A327PCT23YH90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>My Cats Are Not Fans of the New Food My cats h...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Felidae Dry Cat Food for Senior and Overweight...</td>\n",
+       "      <td>Cats</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>B0001PB9FY</td>\n",
+       "      <td>A3HDKO7OW0QNK4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>The Best Hot Sauce in the World I don't know i...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Original Tequila Picante Gourmet de Inclan - C...</td>\n",
+       "      <td>Pantry Staples</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0   ProductId          UserId  Score  \\\n",
+       "0           0  B000E7L2R4  A1MZYO9TZK0BBI      5   \n",
+       "1           1  B0001PB9FE  A3HDKO7OW0QNK4      5   \n",
+       "2           2  B0009XLVG0  A2725IB4YY9JEB      5   \n",
+       "3           3  B0009XLVG0   A327PCT23YH90      1   \n",
+       "4           4  B0001PB9FY  A3HDKO7OW0QNK4      5   \n",
+       "\n",
+       "                                             Content  Sentiment  \\\n",
+       "0  Yay Barley Right now I'm mostly just sprouting...          1   \n",
+       "1  The Best Hot Sauce in the World I don't know i...          1   \n",
+       "2  My cats LOVE this \"diet\" food better than thei...          1   \n",
+       "3  My Cats Are Not Fans of the New Food My cats h...         -1   \n",
+       "4  The Best Hot Sauce in the World I don't know i...          1   \n",
+       "\n",
+       "                                               Title         Category  \n",
+       "0         Organic Sprouting Barley Grass Seed - 9 lb    Lawn & Garden  \n",
+       "1  Original Tequila Picante Gourmet de Inclan - 5 OZ   Pantry Staples  \n",
+       "2  Felidae Dry Cat Food for Senior and Overweight...             Cats  \n",
+       "3  Felidae Dry Cat Food for Senior and Overweight...             Cats  \n",
+       "4  Original Tequila Picante Gourmet de Inclan - C...   Pantry Staples  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "products = pd.read_csv('title_category.csv')\n",
+    "products.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prods = set(products.ProductId)\n",
+    "people = set(products.UserId)\n",
+    "\n",
+    "df_prods = pd.DataFrame(columns= ['ProductId', 'Content', 'Title'])\n",
+    "df_users = pd.DataFrame(columns= ['UserId', 'Content'])\n",
+    "\n",
+    "for prod in prods:\n",
+    "    temp = products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bob\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('bob')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +180,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "2c4eb22513297cec5654cfcbb03155dbdfdfce47361ebee1c20ce7fc1403920c"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.4 64-bit ('env': conda)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.4"
   },
   "orig_nbformat": 4
  },
